# CSharpNativeInterop

./: .gitignore  CSharp.sln  LICENSE  build  build_debug  build_release
CSharpApp/: CSharpApp.csproj  CSharpApp.sln  MainWorker.cs  Program.cs
CSharpApp/Interop/: Hello.cs  NativeLibrary.cs  StatusCodeException.cs
CSharpWrapper/: CSharpWrapper.csproj  Hello.cs  LoadGenerator.cs  LoggerForNative.cs  NativeLibrary.cs
NativeLibrary/: CMakeLists.txt  CsLogger.cpp  CsLogger.h  LoadGenerator.cpp  LoadGenerator.h  exports.cpp  hello.cpp  hello.h  library.cpp  library.h  logger.cpp  logger.h  shared.h  shared_types.h
